# MLB-Data-Pipeline

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
config/: airflow.cfg
